# MSPR2-api

./: .env  .gitignore  Procfile  README.md  pyproject.toml
api/: __init__.py  database.py  settings.py
api/authentication/: models.py  routes.py  schemas.py  security.py
api/upload/: depends.py  models.py  routes.py
documentation/: code-architecture.md
jenkins/: build.groovy  tests.groovy
migrations/: env.py
migrations/versions/: 89a20a823e59_.py  a49e7aaf72b3_add_file_upload.py  d11a424c75e0_add_data.py  da0d32838f0e_users.py
tests/: conftest.py  test.csv  test.py  test_regression.py
tmp/: experiment_202101311446.csv
