[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
src_paths = ["api", "tests"]
virtual_env = ".venv"

[tool.poetry]
name = "mspr2"
version = "0.1.0"
description = ""
authors = ["Romain CHAHINE <romain.chahine@rwigo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8.6"
requests = "^2.25.1"
aiofiles = "^0.6.0"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"
fastapi = "^0.63.0"
pydantic = {extras = ["email"], version = "^1.7.3"}
SQLAlchemy = "^1.3.22"
uvicorn = "^0.13.3"
PyJWT = "^2.0.0"
passlib = "^1.7.4"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.1"
pylint = "^2.6.0"
matplotlib = "^3.3.3"
typer = "^0.3.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
